--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,3 +22,5 @@
 <ul *ngFor="let error of errors">
   <li>{{error | json}}</li>
 </ul>
+<img id='mnist_6' src='../../assets/cat.jpg' width=224 height=224 />
+<app-mnet></app-mnet>
